bundle part done

--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "scripts": {
     "accounts": "npx hardhat accounts",
     "compile": "npx hardhat compile",
-    "lint": "solhint -c solhint.json --ignore-path .solhintignore -w 0 ./contracts/IDGAF.sol",
+    "lint": "solhint -c solhint.json --ignore-path .solhintignore -w 0 ./contracts/*",
     "test": "npx hardhat test",
     "test:dotonly": "dot-only-hunter test",
     "coverage": "npx hardhat coverage",
     "clean": "npx hardhat clean",
     "chain": "npx hardhat node",
-    "deploy": "npx hardhat run --network localhost scripts/deployMinter.ts",
-    "giveaway": "npx hardhat --network localhost giveaway",
-    "deploy:testnet": "npx hardhat run --network testnet scripts/DeployForImmutable.ts",
-    "verify:testnet": "npx hardhat verify --network testnet --constructor-args args.js 0xC122e33187652Ae42e1781343909ECA697a280A1",
+    "deploy": "npx hardhat run --network localhost scripts/deployBubbleSale.ts",
     "deploy:mainnet": "npx hardhat run --network mainnet scripts/deployMinter.ts",
     "verify:mainnet": "npx hardhat verify --network mainnet --constructor-args args.js 0x2A644467FfD0BAfd597fE00711EDD074C1097305",
-    "prettier:fix": "npx prettier --write 'contracts/IDGAF.sol'",
-    "prettier:check": "npx prettier --check 'contracts/IDGAF.sol'",
+    "prettier:fix": "npx prettier --write 'contracts/*'",
+    "prettier:check": "npx prettier --check 'contracts/*'",
     "issues": "slither . --solc-disable-warnings 2>&1",
-    "deploy:mumbai": "npx hardhat run --network mumbai scripts/deployMinter.ts",
+    "deploy:mumbai": "npx hardhat run --network mumbai scripts/deployBubbleSale.ts",
     "verify:mumbai": "npx hardhat verify --network mumbai --constructor-args args.js 0xF9fBC4cD1B411F641A9Ec83137bfaE0aCBB4D8Fd",
     "testnet": "npx hardhat --network testnet",
     "balance:testnet": "npx hardhat --network mumbai balance",
